tests/Project2/student_test/test_2_s09.out
Error type 16 at Line 2: struct node haven't define
Error type 16 at Line 3: struct node haven't define