tests/Project2/student_test/test_2_s09.spl
struct node {
    struct node value;
    struct node children[10];
};

int test_5(int a, int b){
    return a + b;
}